# SimpleApplication

./: .gitignore  Cargo.toml  README.md  meson.build  org.self.SimpleApplication.json  org.self.SimpleApplication.json~
data/: meson.build  org.self.SimpleApplication.desktop.in  org.self.SimpleApplication.gschema.xml  org.self.SimpleApplication.metainfo.xml.in  org.self.SimpleApplication.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.rs  config.rs  main.c  main.rs  meson.build  preferences.rs  preferences.ui  simpleapplication-application.c  simpleapplication-application.h  simpleapplication-preferences.c  simpleapplication-preferences.h  simpleapplication-preferences.ui  simpleapplication-window.c  simpleapplication-window.h  simpleapplication-window.ui  simpleapplication.gresource.xml  style.css  themer.rs  themer.ui  window.rs  window.ui
src/gtk/: help-overlay.ui
